--- a/kudapizza-prizes/assets/css/prizes.css
+++ b/kudapizza-prizes/assets/css/prizes.css
@@ -30,8 +30,8 @@
 }
 .prizes__image--active{
     width: 100%;
-    height: auto;
-    transition: height 2s ease-in-out;
+    height: 1500px;
+    transition: 2s ease-in-out;
 }
 .prizes__content-text{
     padding-top: 12px;
